2015-01-19  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* configure.host: Add extra system for OpenRISC baremetal.

2015-01-14  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/sys/unistd.h [__BSD_VISIBLE]: Add issetugid() prototype.

2015-01-14  Joel Sherrill <joel.sherrill@oarcorp.com>

	* doc/makedoc.c: Use uintptr_t to avoid int/pointer size warnings

2015-01-14  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* configure.host: Add extra system for OpenRISC baremetal
	* libc/include/sys/config.h: Dynamic reentrancy for or1k sys targets
	* libc/sys/or1k/: New system for or1k baremetal
	* libc/sys/or1k/Makefile.am: New file
	* libc/sys/or1k/Makefile.in: New file
	* libc/sys/or1k/aclocal.m4: New file
	* libc/sys/or1k/configure.in: New file
	* libc/sys/or1k/configure: New file
	* libc/sys/or1k/getreent.S: New file
	* libc/sys/or1k/mlock.S: New file
	* libc/sys/or1k/or1k-asm.S: New file

2015-01-12  Renlin Li  <renlin.li@arm.com>

	* testsuite/newlib.wctype/tiswctype.c (main): Use wide character type
	function.

2015-01-08  Corinna Vinschen  <vinschen@redhat.com>

	* libc/time/strftime.c (__strftime): Utilize __TM_GMTOFF and __TM_ZONE
	on systems where available.  On Cygwin, call function to get values.
	Add comment to explain why.  Drop TZ_LOCK/TZ_UNLOCK in 'z' case since
	it's not necessary.  In 'Z' case, add a comment to document a potential
	codeset problem.

2015-01-08  Renlin Li  <renlin.li@arm.com>

	* testsuite/newlib.wctype/twctrans.c (main): Use towlower and towupper.

2015-01-06  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/aarch64/strcpy.S (strcpy): Further performance
	improvements.  Adjust to allow building as stpcpy.
	* libc/machine/aarch64/stpcpy.S: New file.
	* libc/machine/aarch64/stpcpy-stub.c: New file.
	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Build stpcpy.
	* libc/machine/aarch64/Makefile.in: Regenerated.

2014-12-26  Freddie Chopin  <freddie_chopin@op.pl>
