@@ -1,3 +1,7 @@
+2015-01-19  Wilco Dijkstra  wdijkstr@arm.com
+
+	* libc/machine/aarch64/strlen.S (strlen): Improve performance.
+
 2015-01-19  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>
 
 	* configure.host: Add extra system for OpenRISC baremetal.
